--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,38 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  font-family: sans-serif;
+.App {
+  text-align: center;
 }
 
-.page {
-  width: 100%;
-  height: 100vh;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-}
-
-.header {
-  width: 100%;
-  height: 80px;
-  border-bottom: 2px solid gray;
-  display: flex;
+  align-items: center;
   justify-content: center;
-  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.content {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 30px;
+.App-link {
+  color: #61dafb;
 }
 
-.footer {
-  width: 100%;
-  height: 80px;
-  border-top: 2px solid gray;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.button {
-  padding: 10px;
-  margin-right: 30px;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
